# bolt

./: .codespellrc  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CMakeLists.txt  Makefile  conanfile.py
.devcontainer/clang/: Dockerfile.clang  devcontainer.json
.github/actions/bolt-build-base/: action.yml
.github/runners/: requirements.txt
.github/workflows/: blog-check.yml  pages.yml  setup-env.yml
bolt/benchmarks/paimon/: PaimonBenchmark.cpp
bolt/buffer/: Buffer.h
bolt/common/base/: Exceptions.h  NumberParsing.h  SimdUtil-inl.h  SimdUtil.h
bolt/common/base/tests/: CMakeLists.txt  ExceptionTest.cpp  NumberParsingTest.cpp
bolt/common/token/: CMakeLists.txt
bolt/connectors/: CMakeLists.txt  Connector.h
bolt/connectors/hive/: HiveDataSource.cpp  HiveDataSource.h  IgnoreCorruptFile.h  PaimonMetadataColumn.cpp  SplitReader.h
bolt/connectors/paimon/: BoltMemoryPool.h  CMakeLists.txt  PaimonBoltHdfsFileSystem.cpp  PaimonBoltHdfsFileSystem.h  PaimonConfig.cpp  PaimonConfig.h  PaimonConnector.cpp  PaimonConnector.h  PaimonConnectorSplit.h  PaimonDataSource.cpp  PaimonDataSource.h  PaimonFilterTranslator.cpp  PaimonFilterTranslator.h  PaimonParquetReader.cpp  PaimonParquetReader.h  PaimonTableHandle.h
bolt/connectors/paimon/benchmark/: .gitignore  CMakeLists.txt  PaimonBenchmark.cpp  create_benchmark_tables.py
bolt/connectors/paimon/tests/: .gitignore  CMakeLists.txt  HdfsContainerMiniCluster.cpp  HdfsContainerMiniCluster.h  PaimonConfigTest.cpp  PaimonConnectorTest.cpp  PaimonFilterPushdownTest.cpp  PaimonFilterTranslatorTest.cpp  PaimonHdfsFileSystemTest.cpp  PaimonParquetReaderTest.cpp  create_test_tables.py  hdfs_minicluster.sh
bolt/core/: PlanNode.cpp  PlanNode.h  QueryConfig.h
bolt/core/tests/: QueryConfigTest.cpp
bolt/dwio/common/: BitPackDecoder.cpp  ColumnVisitors.h  DirectBufferedInput.cpp  DirectBufferedInput.h  DirectInputStream.cpp  Options.h  SelectiveStructColumnReader.cpp  Statistics.h
bolt/dwio/parquet/tests/reader/: CMakeLists.txt  ParquetReaderTest.cpp  ParquetTableScanTest.cpp
bolt/exec/: Aggregate.cpp  AggregateCompanionSignatures.cpp  CMakeLists.txt  Driver.cpp  HashBuild.cpp  HashBuild.h  HashJoinBridge.cpp  HashJoinBridge.h  HashProbe.cpp  HashTable.cpp  HashTable.h  LocalPlanner.cpp  MemoryPressureUtils.cpp  MemoryPressureUtils.h  MergeJoin.cpp  Operator.cpp  RowsStreamingWindowBuild.cpp  RowsStreamingWindowPartition.cpp  RowsStreamingWindowPartition.h  SortWindowBuild.cpp  SpillableWindowBuild.cpp  Spiller.cpp  Spiller.h  StreamingAggregation.cpp  StreamingWindowBuild.cpp  Task.cpp  Task.h  Window.cpp  WindowPartition.cpp  WindowPartition.h
bolt/exec/tests/: AggregateCompanionAdapterTest.cpp  AggregateCompanionSignaturesTest.cpp  AggregationTest.cpp  CMakeLists.txt  DriverTest.cpp  HashJoinTest.cpp  MultiFragmentTest.cpp  TaskTest.cpp
bolt/exec/tests/utils/: MemoryHogOperator.cpp  MemoryHogOperator.h  PlanBuilder.cpp  PlanBuilder.h
bolt/expression/: CastExpr-tpl.cpp  ExprToSubfieldFilter.cpp  ExprToSubfieldFilter.h
bolt/functions/flinksql/: CMakeLists.txt  RegexFunctions.cpp  RegexFunctions.h
bolt/functions/lib/: Map.h  MapFromEntries.cpp  Re2Functions.cpp  Re2Functions.h  Sequence.cpp  SubscriptUtil.cpp  SubscriptUtil.h
bolt/functions/prestosql/: ElementAt.cpp  Map.cpp  Subscript.cpp  Zip.cpp
bolt/functions/sparksql/: CMakeLists.txt  CharVarchar.h  DecimalVectorFunctions.cpp  JsonToMap.cpp  MapFromArrays.cpp  MapFromArrays.h  StringSplitSQL.cpp  StringSplitSQL.h  ToJson.h
bolt/functions/sparksql/aggregates/: BitmapConstructAggAggregate.cpp  BitmapConstructAggAggregate.h  CMakeLists.txt  FirstLastAggregate.cpp  MinMaxByAggregate.cpp  MinMaxByAggregate.cpp.in  MinMaxByAggregateInternal.h  PercentileAggregate.cpp  PercentileAggregate.cpp.in  PercentileAggregate.h  PercentileApproxAggregate.cpp  PercentileApproxAggregate.h  Register.cpp
bolt/functions/sparksql/aggregates/tests/: AverageAggregationTest.cpp  BitmapConstructAggAggregateTest.cpp  CMakeLists.txt  FirstAggregateTest.cpp  PercentileApproxTest.cpp
bolt/jit/: CompiledModule.cpp  CompiledModule.h
bolt/jit/RowContainer/: RowContainerCodeGenerator.cpp
bolt/jit/tests/: CMakeLists.txt  RowContainerIRTest.cpp
bolt/parse/: DuckLogicalOperator.h  QueryPlanner.cpp
bolt/row/: CMakeLists.txt  RowFormat.h
bolt/row/benchmark/: CMakeLists.txt  DenseRowSerializeBenchmark.cpp
bolt/row/dense/: DenseRow.cpp  DenseRow.h  DenseRowGeneral.h  DenseRowGeneralDecode.cpp  DenseRowGeneralEncode.cpp  DenseRowScalar.h  DenseRowScalarDecode.cpp  DenseRowScalarEncode.cpp  IntVarint.h
bolt/row/tests/: CMakeLists.txt  DenseRowTest.cpp
bolt/shuffle/sparksql/: BoltRowBasedSortShuffleWriter.cpp  BoltRowBasedSortShuffleWriter.h  BoltShuffleReader.cpp  BoltShuffleReader.h  BoltShuffleWriter.cpp  BoltShuffleWriter.h  BoltShuffleWriterV2.cpp  BoltShuffleWriterV2.h  CelebornReaderStreamIterator.cpp  CelebornReaderStreamIterator.h  Options.h  ReaderStreamIterator.h  ShuffleColumnarToRowConverter.cpp  ShuffleColumnarToRowConverter.h  ShuffleReaderNode.cpp  ShuffleReaderNode.h  ShuffleRowToColumnarConverter.cpp  ShuffleRowToColumnarConverter.h  ShuffleWriter.h  ShuffleWriterNode.cpp
bolt/type/: DecimalUtil.h
bolt/vector/: BaseVector.cpp  BaseVector.h  ComplexVector.cpp  FlatVector-inl.h
bolt/vector/tests/: EnsureWritableVectorTest.cpp
doc/blog/: Gemfile  _config.yml  blog.md  index.md
doc/blog/_includes/: head_custom.html
doc/blog/_layouts/: post.html
doc/blog/_posts/: 2026-06-27-how-to-write-blog.md  2026-07-01-operator-fusion-eliminating-row-column-conversion.md  2026-07-02-adaptive-task-parallelism.md  2026-07-03-accelerating-bolt-via-jit.md  2026-07-03-adaptive-spill-partition.md  2026-07-03-bolt-shuffle-offload.md  2026-07-03-denserow-compact-shuffle-row-format.md  2026-07-03-hivehash-refactor.md  2026-07-03-memory-management-offload.md  2026-07-03-merging-multi-level-dictionary.md  2026-07-03-row-based-spill.md  (+1 more)
scripts/: configure-conan-libc-settings.py  normalize_blog_posts.py  run-clang-tidy.py  setup-dev-env.sh
scripts/launch-spark/: test-queries.sql
(+103 files in other folders)
